[fix] z-index

--- a/src/scss/_header/_menu-btn.scss
+++ b/src/scss/_header/_menu-btn.scss
@@ -12,6 +12,7 @@
 .menu-btn {
     width: 36px;
     height: 32px;
+    z-index: 20;
 
     &__line{
         &--top {
