--- a/src/scss/_header/_menu.scss
+++ b/src/scss/_header/_menu.scss
@@ -24,6 +24,7 @@
     background: #1E1E1E;
     color: white;
     transition: opacity .2s ease-in-out, visibility .2s ease-in-out;
+    z-index: 10;
 
     &__list {
         text-align: center;
